<resources>
    <string name="app_name">PropSimplify</string>
    <string name="get_started">Get Started</string>
    <string name="label_home">Home</string>
    <string name="label_map">Map</string>
    <string name="label_favourite">Favourite</string>
    <string name="label_message">Message</string>
    <string name="label_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_search">Search</string>
    <string name="label_talk_to_propy">Talk to Propy</string>
    <string name="label_25_of_our_users_looking_property_in_that_range">25% of our users looking property in that range</string>
    <string name="label_what_is_your_budget">What is your budget?</string>
    <string name="label_minimum">Minimum</string>
    <string name="label_aed">AED</string>
    <string name="label_maximum">Maximum</string>
    <string name="label_ar">Ar</string>
    <string name="label_maps">Maps</string>
    <string name="google_map_api_key">AIzaSyAaZC5gor_kIBK6h9H1jisiOTYZ2SrsGp8</string>
</resources>