<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/label_home" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_location"
        android:title="@string/label_map" />

    <item
        android:id="@+id/navigation_favourite"
        android:icon="@drawable/ic_favourite"
        android:title="@string/label_favourite" />
    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/ic_message"
        android:title="@string/label_message" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/label_profile" />
</menu>